docs: lock current 256 inflight qualification